syntax = "proto3";

package services;

message UnaryCallRequest
{
    string name = 1;
}

message UnaryCallResponse
{
    string greeting = 1;
}

service UnaryService
{
    rpc UnaryCall(UnaryCallRequest) returns (UnaryCallResponse);
}
